@@ -1,4 +1,4 @@
-# highlight.rb $Revision: 1.2 $
+# highlight.rb $Revision: 1.3 $
 #
 # Highlighting the element jumped from other pages.
 #
@@ -20,6 +20,13 @@ if @mode == 'day' then
 			
 				saveClass = highlightElem.className;
 				highlightElem.className = "highlight";
+
+				if (highlightElem.tagName == 'H3') {
+					var diary_title = "#{@conf.html_title.gsub(/"/, '\\"')} (#{@date.strftime('%Y-%m-%d')})";
+					var sanchor_length = #{@conf.section_anchor.gsub(/<[^>]+?>/, '').length};
+					var section_title = highlightElem.innerHTML.replace(/<[^>]+?>/g, '').substr(sanchor_length);
+					document.title = section_title + ' - ' + diary_title;
+				}
 			}
 					
 			function getHighlightElement(name) {
