@@ -1,3 +1,6 @@
+2005-04-28  ishinao <ishinao at ishinao.net>
+	* highlight.rb: set subtitle into title element.
+
 2005-04-21  Kazuhiko  <kazuhiko@fdiary.net>
 	* rast-register.rb: fix a typo. not set @ignore_parser_cache.
 
@@ -33,7 +36,6 @@
 2005-03-03 zunda <zunda at freeshell.org>
 	* disp_referrer.rb: handle rush conditions more properly when removing cache
 
->>>>>>> 1.311
 2005-03-02  Tatsuki Sugiura <sugi@nemui.org>
 	* tb-show.rb, ja/tb-show.rb, en/tb-show.rb: trackbacks_of_today_short is now selectable when in non-BlogKit mode from the config page
 
